--- a/css/postions/style.css
+++ b/css/postions/style.css
@@ -1,8 +1,5 @@
 
-.box{
-    margin: 10px;
-    border: 2px solid black;
-}
+
 .static {
     position: static;
     background-color: lightgreen;
@@ -49,7 +46,7 @@ left: 200px;
     width: 100px;
     margin: 5px;
     left: 200px;
-    top: 0;
+    bottom: 200px;
     position: sticky;
 
 }
